<resources>
    <string name="app_name">Top Movies</string>
    <string name="item_layout_rank_title">Rank:</string>
    <string name="item_layout_year_title">Year:</string>
    <string name="main_activity_button_start">Let\'s Start</string>
    <string name="movie_details_description_title">Description</string>
    <string name="movie_details_rating_title">Rating</string>
    <string name="movie_details_genres_title">Genres</string>
    <string name="movie_details_date_release_title">Release</string>
    <string name="image_movie_description">Movie image</string>
    <string name="item_layout_previous_rank_title">Previous rank:</string>
    <string name="menu_title_about">About</string>
    <string name="nav_menu_title_top_movie">Top movies</string>
    <string name="nav_menu_title_favorite">Favorite</string>
    <string name="item_description_favorite_button">Favorite button</string>
    <string name="nav_fragment_label_top_movies">Top movies</string>
    <string name="nav_fragment_label_movie_details">Movie details</string>
    <string name="nav_fragment_label_favorite_movies">Favorite movies</string>
    <string name="about_dialog_fragment_title">About</string>
    <string name="about_dialog_fragment_message">This app shows top 100 movies</string>
    <string name="ok">OK</string>
    <string name="main_activity_dialog_tag">about dialog</string>
    <string name="profile_header">Profile</string>
    <string name="debug_screen_header">Debug screen</string>
    <string name="name_title">Full Name</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_setting_title">Setting</string>
    <string name="setting_item_textview_name">Tap to change profile image</string>
    <string name="setting_item_imageview_content_description">profile image</string>
    <string name="error_redirection">Redirection you too many times</string>
    <string name="error_client">Please restart your client</string>
    <string name="error_server">An internal server error has occurred</string>
    <string name="error_unknown">The error is unknown</string>
    <string name="no_internet_description">No Internet Connection</string>
    <string name="no_internet_recommendation">Please check your connection!</string>
    <string name="no_internet_connection_description">No internet connection</string>
    <string name="favorite_movies_massage_no_movies">You don`t have favorite movies</string>
    <string name="movies_massage_no_movies">Please refresh movies</string>
    <string name="intent_select_picture">Select Picture</string>
    <string name="notification_argument_name">Screen</string>
    <string name="server_error">Something off about the server, please refresh</string>
</resources>
