<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
            android:layout_width="152dp"
            android:layout_height="152dp"
            android:contentDescription="@string/no_internet_connection_description"
            android:src="@drawable/ic_wifi_off" />

    <TextView
            style="@style/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_small"
            android:text="@string/no_internet_description" />

    <TextView
            style="@style/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_small"
            android:text="@string/no_internet_recommendation" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_retry"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_medium"
            android:text="@android:string/ok" />
</LinearLayout>