<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetailsActivity">

    <ImageView
        android:id="@+id/imageview_movie_details_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/margin_all_small"
        android:contentDescription="@string/image_movie_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/guideline_movie_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_movie_details_movie_title" />

    <TextView
        android:id="@+id/textview_movie_details_title_description"
        style="@style/text_medium.roxy_brown.bold.serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_medium"
        android:layout_marginTop="@dimen/margin_all_small"
        android:text="@string/movie_details_description_title"
        app:layout_constraintStart_toStartOf="@+id/imageview_movie_details_image"
        app:layout_constraintTop_toBottomOf="@id/imageview_movie_details_image" />

    <TextView
        android:id="@+id/textview_movie_details_description"
        style="@style/text_small.roxy_brown.serif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_movie_details_title_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_movie_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textview_movie_details_movie_title"
        style="@style/text_large.roxy_brown.bold.serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_movie_details_rating_title"
        style="@style/text_small.roxy_brown.serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_details_rating_title"
        app:layout_constraintStart_toStartOf="@+id/guideline_movie_details"
        app:layout_constraintTop_toTopOf="@id/imageview_movie_details_image" />

    <TextView
        android:id="@+id/textview_movie_details_rating_number"
        style="@style/text_small.roxy_brown.serif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_movie_details_rating_title"
        app:layout_constraintTop_toTopOf="@id/textview_movie_details_rating_title" />

    <TextView
        android:id="@+id/textview_movie_details_genres_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_small.roxy_brown.serif"
        android:layout_marginTop="@dimen/margin_all_small"
        android:text="@string/movie_details_genres_title"
        app:layout_constraintStart_toStartOf="@+id/guideline_movie_details"
        app:layout_constraintTop_toBottomOf="@id/textview_movie_details_date_release_title" />

    <TextView
        android:id="@+id/textview_movie_details_genres_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        style="@style/text_small.roxy_brown.serif"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_movie_details_genres_title"
        app:layout_constraintTop_toTopOf="@id/textview_movie_details_genres_title" />

    <TextView
        android:id="@+id/textview_movie_details_date_release_title"
        style="@style/text_small.roxy_brown.serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_small"
        android:text="@string/movie_details_date_release_title"
        app:layout_constraintStart_toStartOf="@+id/guideline_movie_details"
        app:layout_constraintTop_toBottomOf="@id/textview_movie_details_rating_title" />

    <TextView
        android:id="@+id/textview_movie_details_date_release_source"
        android:layout_width="0dp"
        style="@style/text_small.roxy_brown.serif"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all_small"
        android:layout_marginEnd="@dimen/margin_all_small"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_movie_details_date_release_title"
        app:layout_constraintTop_toTopOf="@id/textview_movie_details_date_release_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
