<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_all_medium"
    android:layout_marginTop="@dimen/margin_all_medium"
    android:layout_marginEnd="@dimen/margin_all_medium"
    app:cardCornerRadius="@dimen/corner_radius_item_layout"
    app:cardElevation="@dimen/card_elevation_card_view"
    app:cardMaxElevation="@dimen/max_elevation_card_view"
    app:contentPadding="@dimen/content_padding_card_view"
    app:contentPaddingBottom="@dimen/content_padding_button_card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_rank_title"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_movie_name"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/circle_avatar_view_item_layout_movie_image"
            android:text="@string/item_layout_rank_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_rank_number"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_movie_name"
            android:layout_marginStart="@dimen/margin_all_small"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/textview_item_layout_rank_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_movie_name"
            style="@style/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/circle_avatar_view_item_layout_movie_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_year_title"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_previous_rank_title"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/circle_avatar_view_item_layout_movie_image"
            android:text="@string/item_layout_year_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_year_number"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_previous_rank_title"
            android:layout_marginStart="@dimen/margin_all_small"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/textview_item_layout_year_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_previous_rank_title"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_rank_title"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/circle_avatar_view_item_layout_movie_image"
            android:text="@string/item_layout_previous_rank_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_item_layout_previous_rank_number"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_item_layout_rank_title"
            android:layout_marginStart="@dimen/margin_all_small"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_toEndOf="@id/textview_item_layout_previous_rank_title" />

        <com.example.topmovies.view.CircleAvatarView
            android:id="@+id/circle_avatar_view_item_layout_movie_image"
            android:layout_width="@dimen/width_item_layout_circle_avatar_view"
            android:layout_height="@dimen/height_item_layout_circle_avatar_view"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_all_small"
            android:layout_marginTop="@dimen/margin_all_small"
            android:layout_marginEnd="@dimen/margin_all_small"
            android:layout_marginBottom="@dimen/margin_all_small" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/image_button_item_favorite_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@id/circle_avatar_view_item_layout_movie_image"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/item_description_favorite_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_unfilled_star"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
